--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -18,7 +18,7 @@ a:hover,
 a:focus,
 a:active,
 a.active {
-  color: #18BC9C;
+  color: white;
 }
 h1,
 h2,
@@ -39,6 +39,13 @@ hr.star-primary {
   max-width: 250px;
   margin: 25px auto 30px;
 }
+.white, .white a {
+  color: #fff;
+}
+.white:hover, 
+.white:focus {
+ color: darkred;
+}
 hr.star-light:after,
 hr.star-primary:after {
   content: "\f005";
@@ -50,26 +57,30 @@ hr.star-primary:after {
   padding: 0 0.25em;
 }
 hr.star-light {
-  border-color: white;
+  border-color: darkred;
 }
 hr.star-light:after {
-  background-color: #18BC9C;
-  color: white;
+  /*background-color: white;*/
+  background-color: transparent;
+  color: transparent;
 }
 hr.star-primary {
-  border-color: #2C3E50;
+  border-color: darkred;
 }
 hr.star-primary:after {
-  background-color: white;
-  color: #2C3E50;
+  background-color: transparent;
+  color: transparent;
 }
 .img-centered {
   margin: 0 auto;
 }
 header {
   text-align: center;
-  background: #18BC9C;
-  color: white;
+  border-bottom-style: solid; 
+  border-bottom-color: black;
+  /*background: white;*/
+  background: white;
+  color: black;
 }
 header .container {
   padding-top: 100px;
@@ -103,7 +114,7 @@ header .intro-text .skills {
   }
 }
 .navbar-custom {
-  background: #2C3E50;
+  background: black;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
@@ -125,33 +136,33 @@ header .intro-text .skills {
   color: white;
 }
 .navbar-custom .navbar-nav li a:hover {
-  color: #18BC9C;
+  color: darkred;
 }
 .navbar-custom .navbar-nav li a:focus,
 .navbar-custom .navbar-nav li a:active {
-  color: white;
+  color: darkred;
 }
 .navbar-custom .navbar-nav li.active a {
-  color: white;
-  background: #18BC9C;
+  color: darkred;
+  background: transparent;
 }
 .navbar-custom .navbar-nav li.active a:hover,
 .navbar-custom .navbar-nav li.active a:focus,
 .navbar-custom .navbar-nav li.active a:active {
-  color: white;
-  background: #18BC9C;
+  color: darkred;
+  background: transparent;
 }
 .navbar-custom .navbar-toggle {
   color: white;
   text-transform: uppercase;
   font-size: 10px;
-  border-color: white;
+  border-color: transparent;
 }
 .navbar-custom .navbar-toggle:hover,
 .navbar-custom .navbar-toggle:focus {
-  background-color: #18BC9C;
-  color: white;
-  border-color: #18BC9C;
+  background-color: transparent;
+  color: darkred;
+  border-color: transparent;
 }
 @media (min-width: 768px) {
   .navbar-custom {
@@ -181,8 +192,12 @@ section h2 {
   font-size: 3em;
 }
 section.success {
-  background: #18BC9C;
-  color: white;
+  border-top-style: solid; 
+  border-top-color: black;
+  border-bottom-style: solid;
+  border-bottom-color: black;
+  background: white;
+  color: black;
 }
 @media (max-width: 767px) {
   section {
@@ -203,14 +218,14 @@ section.success {
   margin: 0 auto;
 }
 #portfolio .portfolio-item .portfolio-link .caption {
-  background: rgba(24, 188, 156, 0.9);
+  background: rgba(139, 0, 0,0.8);
   position: absolute;
   width: 100%;
   height: 100%;
   opacity: 0;
-  transition: all ease 0.5s;
-  -webkit-transition: all ease 0.5s;
-  -moz-transition: all ease 0.5s;
+  transition: all ease 1s;
+  -webkit-transition: all ease 1s;
+  -moz-transition: all ease 1s;
 }
 #portfolio .portfolio-item .portfolio-link .caption:hover {
   opacity: 1;
@@ -284,7 +299,7 @@ section.success {
   opacity: 1;
 }
 .floating-label-form-group-with-focus label {
-  color: #18BC9C;
+  color: white;
 }
 form .row:first-child .floating-label-form-group {
   border-top: 1px solid #eeeeee;
@@ -297,14 +312,14 @@ footer h3 {
 }
 footer .footer-above {
   padding-top: 50px;
-  background-color: #2C3E50;
+  background-color: black;
 }
 footer .footer-col {
   margin-bottom: 50px;
 }
 footer .footer-below {
   padding: 25px 0;
-  background-color: #233140;
+  background-color: black;
 }
 .btn-outline {
   color: white;
@@ -318,8 +333,8 @@ footer .footer-below {
 .btn-outline:focus,
 .btn-outline:active,
 .btn-outline.active {
-  color: #18BC9C;
-  background: white;
+  color: white;
+  background: darkred;
   border: solid 2px white;
 }
 .btn-primary {
@@ -366,8 +381,8 @@ fieldset[disabled] .btn-primary.active {
 }
 .btn-success {
   color: white;
-  background-color: #18BC9C;
-  border-color: #18BC9C;
+  background-color: black;
+  border-color: white;
   font-weight: 700;
 }
 .btn-success:hover,
@@ -376,8 +391,8 @@ fieldset[disabled] .btn-primary.active {
 .btn-success.active,
 .open .dropdown-toggle.btn-success {
   color: white;
-  background-color: #128f76;
-  border-color: #11866f;
+  background-color: darkred;
+  border-color: darkred;
 }
 .btn-success:active,
 .btn-success.active,
@@ -399,11 +414,11 @@ fieldset[disabled] .btn-success:active,
 .btn-success.disabled.active,
 .btn-success[disabled].active,
 fieldset[disabled] .btn-success.active {
-  background-color: #18BC9C;
-  border-color: #18BC9C;
+  background-color: white;
+  border-color: white;
 }
 .btn-success .badge {
-  color: #18BC9C;
+  color: white;
   background-color: white;
 }
 .btn-social {
@@ -507,7 +522,7 @@ fieldset[disabled] .btn-success.active {
   position: absolute;
   left: 0px;
   top: 0px;
-  background: #18BC9C;
+  background: white;
   outline: 0;
   transition: top 0.1s ease-in, background 0.5s linear;
 }
